--- a/online_2D.html
+++ b/online_2D.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-		<title>联机对战 | 五子棋</title>
+		<title>联机对战 | 2D五子棋</title>
 		
 		<!--icon-->
 		<link href="./img/icon.png" rel="icon" type="image/x-icon"/>
@@ -318,7 +318,7 @@
 	<body>
 		<header id="header">
 			<i id="back" class="layui-icon layui-icon-return"></i>
-			<h1>联机对战</h1>
+			<h1>联机对战 2D</h1>
 			<i id="restart" class="layui-icon layui-icon-refresh"></i>
 		</header>
 		<p id="state" class="connecting">连接服务器中……</p>
