--- a/online_3D.html
+++ b/online_3D.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
-		<title>人机对战 | 3D五子棋</title>
+		<title>联机对战 | 3D五子棋</title>
 		
 		<!--icon-->
 		<link href="./img/icon.png" rel="icon" type="image/x-icon"/>
@@ -392,7 +392,7 @@
 	<body>
 		<header id="header">
 			<i id="back" class="layui-icon layui-icon-return"></i>
-			<h1>双人对战 3D</h1>
+			<h1>联机对战 3D</h1>
 			<i id="restart" class="layui-icon layui-icon-refresh"></i>
 		</header>
 		<p id="state" class="connecting">连接服务器中……</p>
