--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 			max-width: 100%;
 			margin: auto;
 		}
+		html.outUp{
+			background-image: none;
+			background-color: #fffae8;
+		}
 		
 		/* layui */
 		.layui-btn-group .layui-btn:not(:first-child){
@@ -72,7 +76,6 @@
 			left: 0;
 			top: 0;
 			margin: 0;
-			padding: 0;
 			
 			display: flex;
 			flex-direction: column;
@@ -86,13 +89,13 @@
 			margin: auto;
 			
 			opacity: 0; /* 完全透明 */
-			transition: transform 0.6s, opacity 0.6s; /* 出入动画 */
+			transition: top 0.6s, opacity 0.6s; /* 出入动画 */
 		}
-		body.fadeIn{
+		html.fadeIn > body{
 			opacity: 1; /* 不透明 */
 		}
-		body.outUp{
-			transform: translateY(-100%); /* 上滑 */
+		html.outUp > body{
+			top: -100%; /* 上滑 */
 		}
 		
 		/* h1 */
@@ -541,14 +544,15 @@ document.addEventListener("plusready", function(){
 
 </script>
 <script>
-$("body").addClass("fadeIn");
+$("html").addClass("fadeIn");
 function go(url){
-	$("html").css("background", "#fffae8");
-	$("body").addClass("outUp");
+	layer.load(0);
+	$("html").addClass("outUp");
 	setTimeout(function(){
+		plus.navigator.setStatusBarBackground("#aef");
+		plus.navigator.setStatusBarStyle("dark");
 		location.href = url;
 	}, 600);
-	layer.load(0);
 }
 
 
