--- a/online_3D.html
+++ b/online_3D.html
@@ -514,6 +514,8 @@ $("html").addClass("fadeIn");
 function go(url){
 	$("html").addClass("outDown");
 	setTimeout(function(){
+		plus.navigator.setStatusBarBackground("#aef");
+		plus.navigator.setStatusBarStyle("dark");
 		location.href = url;
 	}, 600);
 	layer.load(0);
