--- a/unpackage/debug/online_2D.html
+++ b/unpackage/debug/online_2D.html
@@ -283,7 +283,7 @@
 		<!--<link rel="stylesheet" href="https://unpkg.com/layui@2.6.4/dist/css/layui.css">
 		<script src="https://unpkg.com/layui@2.6.8/dist/layui.js"></script>-->
 		<script src="./layui/layui.js"></script>
-		<link rel="stylesheet" href="./layui/css/layui.css">
+		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
@@ -409,6 +409,8 @@ $("html").addClass("fadeIn");
 function go(url){
 	$("html").addClass("outDown");
 	setTimeout(function(){
+		plus.navigator.setStatusBarBackground("#aef");
+		plus.navigator.setStatusBarStyle("dark");
 		location.href = url;
 	}, 600);
 	layer.load(0);
