--- a/one_2D.html
+++ b/one_2D.html
@@ -245,8 +245,8 @@
 		
 		<script src="./js/js_plus.min.js"></script> <!-- js+ -->
 		
-		<script src="https://wzh656.github.io/js/count.js"></script>
-		<script src="https://wzh656.github.io/js/dynamic.js"></script>
+		<script src="https://wzh656.github.io/gobang/js/count.js"></script>
+		<script src="https://wzh656.github.io/gobang/js/dynamic.js"></script>
 		<script>
 		var _hmt = _hmt || [];
 		(function() {
@@ -343,8 +343,10 @@ $("html").addClass("fadeIn");
 function go(url){
 	$("html").addClass("outDown");
 	setTimeout(function(){
-		plus.navigator.setStatusBarBackground("#000");
-		plus.navigator.setStatusBarStyle("light");
+		if (typeof plus != "undefined"){
+			plus.navigator.setStatusBarBackground("#000");
+			plus.navigator.setStatusBarStyle("light");
+		}
 		location.href = url;
 	}, 600);
 	layer.load(0);
@@ -699,7 +701,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/好运来.mp3").play();
+				gameOverMusic = new Player("./music/win.mp3").play();
 				
 			}else if (win === false){
 				this.winner = 1-this.first;
@@ -715,7 +717,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/凉凉.mp3").play();
+				gameOverMusic = new Player("./music/fail.mp3").play();
 				
 			}else{
 				this.winner = null;
